Changed to version 0.13.0 which is the same as version 13 and earlier versions X should be considered as 0.X.0

--- a/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison_strategy1.Rmd
+++ b/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison_strategy1.Rmd
@@ -9,8 +9,12 @@ mathjax: null
 ---
 
 ---
-title: |
-    | Model strategy 1
+#title: |
+#    | Model strategy 1
+    
+author: |
+    | Ropls with permutated variable selection: Version 0.13.0
+    | Marika Strom
 ---
 
 # Model 1. Models with userset p(corr) cutoff during variable selection and userset number of orthogonal variables pre and post variable selection
