--- a/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison_strategy5.Rmd
+++ b/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison_strategy5.Rmd
@@ -9,8 +9,12 @@ mathjax: null
 ---
 
 ---
-title: |
-    | Model strategy 5
+#title: |
+#    | Model strategy 5
+    
+author: |
+    | Ropls with permutated variable selection: Version 0.13.0
+    | Marika Strom
 ---
 
 
